Fix alignment on rewards page, fix fill icon

--- a/src/pages/LeaderboardPage/components/BanxRewardsTab/BanxRewardsTab.module.less
+++ b/src/pages/LeaderboardPage/components/BanxRewardsTab/BanxRewardsTab.module.less
@@ -3,7 +3,6 @@
   align-items: center;
   gap: 24px;
   padding: 24px;
-  margin: auto 0;
 
   @media (max-width: 1280px) {
     flex-direction: column-reverse;
@@ -216,6 +215,10 @@
     align-items: center;
     gap: 4px;
     font: var(--important-text-lg);
+  }
+
+  svg path {
+    fill: #1b1b1b;
   }
 }
 
