--- a/src/pages/LeaderboardPage/components/EarnTab/EarnTab.module.less
+++ b/src/pages/LeaderboardPage/components/EarnTab/EarnTab.module.less
@@ -4,7 +4,6 @@
   justify-content: space-between;
   gap: 24px;
   padding: 24px;
-  margin: auto 0;
   width: 100%;
 
   @media (max-width: 960px) {
